规则校验结构